--- a/homework2/src/App.css
+++ b/homework2/src/App.css
@@ -20,12 +20,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.Robot {
+  color: rgb(188, 134, 150);
 }
 
 @keyframes App-logo-spin {
