--- a/homework3/src/App.css
+++ b/homework3/src/App.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(114, 132, 142);
 }
 
 .App-link {
