--- a/homework4/src/App.css
+++ b/homework4/src/App.css
@@ -13,9 +13,20 @@
   }
 }
 
+.App-footer {
+  background-color: rgb(226, 208, 209);
+  height: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: rgb(114, 132, 142);
+}
+
 .App-header {
   background-color: rgb(226, 208, 209);
-  min-height: 100vh;
+  height: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +37,17 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.App-main {
+  background-color: rgb(226, 208, 209);
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: rgb(114, 132, 142);
 }
 
 .Robot {
